Added server basics for routes and static assets. Updated frontend paths

--- a/src/client/public/styles/index.css
+++ b/src/client/public/styles/index.css
@@ -1,11 +1,21 @@
-@import url(../../node_modules/bulma/css/bulma.min.css);
+@import url(bulma.min.css);
 
-html {
+:root {
+  --tc-primary: #0094c8;
+  --tc-secondary: #8b8a8d;
+  --tc-dark-primary: #1d2d50;
+  --tc-dark-secondary: #133b5c;
+  --tc-dark-info: #1e5f74;
+  --tc-dark-warning: #fcdab7;
+}
+
+* {
   box-sizing: border-box;
 }
 
 .root {
-  background-image: url(./assets/clouds.svg);
+  background-image: url(../assets/clouds.svg);
+  background-attachment: fixed;
   background-size: cover;
   min-height: 100vh;
   height: fit-content;
@@ -32,8 +42,19 @@ html {
 }
 
 main.container {
-  height: 100vh;
-  width: 100%;
+  min-height: 100vh;
+}
+
+nav.navbar {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+nav .navbar-item {
+  color: var(--tc-secondary);
+}
+
+nav .navbar-item:hover {
+  background-color: transparent;
 }
 
 .isometric-card {
@@ -54,4 +75,41 @@ main.container {
   transform: translate3d(0px, -16px, 0px) rotateX(51deg) rotateZ(43deg);
   box-shadow: 1px 1px 0 1px #f9f9fb, -1px 0 28px 0 rgba(34, 33, 81, 0.01),
     54px 54px 28px -10px rgba(34, 33, 81, 0.15);
+}
+
+/* SCROLL BAR */
+
+/* Width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* ANIMATIONS */
+
+.appear {
+  animation: Appear 1s;
+}
+
+@keyframes Appear {
+  from {
+    opacity: 0%;
+  }
+  to {
+    opacity: 100%;
+  }
 }
