--- a/src/client/public/styles/members.css
+++ b/src/client/public/styles/members.css
@@ -1,5 +1,4 @@
-@import url(../../../../node_modules/bulma/css/bulma.min.css);
-@import url(../../index.css);
+@import url(./index.css);
 
 .cards {
   display: flex;
@@ -12,7 +11,7 @@
   flex-basis: 100%;
   padding-left: 8px;
   padding-right: 8px;
-  border: 1px solid white;
+  /* border: 1px solid white; */
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 1px 1px 0 1px #f9f9fb, -1px 0 28px 0 rgba(34, 33, 81, 0.01),
