--- a/src/client/views/members.html
+++ b/src/client/views/members.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Members | TCx</title>
-    <link rel="stylesheet" href="members.css" />
+    <link rel="stylesheet" href="styles/members.css" />
+    <script src="scripts/members.js" defer></script>
   </head>
   <body>
     <div class="root">
       <!-- NAV START -->
       <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-          <a class="navbar-item" href="../../index.html">
-            <img src="../../assets/tc-logo-long-wl.png" />
+          <a class="navbar-item" href="/">
+            <img src="assets/tc-logo-long-wl.png" />
           </a>
 
           <a
@@ -31,8 +32,8 @@
 
         <div id="navbarBasicExample" class="navbar-menu">
           <div class="navbar-start">
-            <a class="navbar-item" href="./docs.html">Docs</a>
-            <a class="navbar-item" href="./members.html">Members</a>
+            <a class="navbar-item" href="/">Docs</a>
+            <a class="navbar-item" href="/members">Members</a>
             <div class="navbar-item has-dropdown is-hoverable">
               <!-- <a class="navbar-link">Lists</a>
               <div class="navbar-dropdown">
@@ -48,25 +49,10 @@
       </nav>
       <!-- NAV END -->
 
-      <main class="container my-5">
+      <main class="container mt-5">
         <!-- MEMBER CARDS START -->
         <div class="cards">
-          <!-- A card with given width -->
-          <div class="cards-item">
-            <div class="avatar">
-              <!-- Avatar image -->
-              <img class="avatar-image" src="../../assets/undefinedBen.png" />
-            </div>
-            <h2 class="title is-2 has-text-white">Ben Bryant</h2>
-            <p class="subtitle is-4 has-text-white">Author</p>
-          </div>
-          <!-- <div class="cards-item">
-            <div class="avatar">
-                <img class="avatar-image" src="..." />
-            </div>
-              <h2 class="title is-2">Next Member...</h2>
-              <p class="subtitle is-4">Optional Subtitle</p>
-          </div> -->
+          <!-- ...js to inject cards... -->
         </div>
         <!-- MEMBER CARDS END -->
       </main>
