--- a/src/client/public/styles/index.css
+++ b/src/client/public/styles/index.css
@@ -33,6 +33,10 @@
   justify-content: center;
 }
 
+.justify-content-around {
+  justify-content: space-around;
+}
+
 .align-items-center {
   align-items: center;
 }
