--- a/src/client/public/styles/members.css
+++ b/src/client/public/styles/members.css
@@ -37,6 +37,14 @@
   width: 100%;
 }
 
+.social-link {
+  stroke: var(--tc-secondary);
+}
+
+.social-link:hover {
+  stroke: #eee;
+}
+
 @media only screen and (min-width: 768px) {
   .cards-item {
     flex-basis: 25%;
